# neural_network_stuff

./: .gitattributes  CMakeLists.txt
src/: NeuralNetwork.cpp  NeuralNetwork.hpp  main.cpp  mainBP.cpp  mnist.cpp  mnistBP.cpp
